apps.yml
#app1=nginx

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      run: app1
  replicas: 1
  template:
    metadata:
      labels:
        run: app1
    spec:
      containers:
      - name: app1
        image: nginx
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: app1
  labels:
    run: app1
spec:
  ports:
    - port: 80
      name: app1
  selector:
    run: app1
  type: NodePort
  
---
#app2=httpd

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  selector:
    matchLabels:
      run: app2
  replicas: 1
  template:
    metadata:
      labels:
        run: app2
    spec:
      containers:
      - name: app2
        image: httpd
        ports:
        - containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: app2
  labels:
    run: app2
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    run: app2
  type: NodePort
