DestinationRule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: all-destnation-rule
spec:
  host: "*"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
